test/tests/stages/18_structures/invalid_struct_tags/extra_credit/var_undeclared_union_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(s)
  identifier(var)
  ;
  return
  const int(0)
  ;
  }
